--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>org.openjfx.MainApp</mainClass>
+                    <mainClass>HelloWorld</mainClass>
                 </configuration>
             </plugin>
 
